[package]
name = "torch-sys"
version = "0.9.0-no-zip"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "tch"

description = "Low-level FFI bindings for the PyTorch C++ api (libtorch)."
repository = "https://github.com/LaurentMazare/tch-rs"
keywords = ["pytorch", "ffi", "deep-learning", "machine-learning"]
categories = ["external-ffi-bindings", "science"]
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2.0"

[build-dependencies]
anyhow = "1.0"
cc = "1.0"
ureq = { version = "2.5.0", features = ["tls"], default-features = false, optional = true }
zip = { version = "0.6", default-features = false, optional = true, features = ["deflate"] }

[features]
download-libtorch = ["ureq", "zip"]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
